<resources>
    <string name="app_name">digi_bank</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">continue</string>
    <string name="lbl_code">Code</string>
    <string name="lbl_angelina_lan">Angelina Lan</string>
    <string name="lbl_thu">Thu</string>
    <string name="lbl_kate_morgan">Kate Morgan</string>
    <string name="lbl_company_name">Company Name</string>
    <string name="lbl_12_09">12.09</string>
    <string name="lbl_expenses">Expenses</string>
    <string name="lbl_unpaid">Unpaid</string>
    <string name="lbl_user_name">User name</string>
    <string name="lbl_01704889390">01704889390</string>
    <string name="msg_jonathan_anderson">Jonathan Anderson</string>
    <string name="msg_notifications_settings">Notifications Settings</string>
    <string name="lbl_bdt">BDT</string>
    <string name="lbl_31_250">$ 31,250</string>
    <string name="lbl_to_acc_to_acc">To acc to acc</string>
    <string name="lbl_massage">Massage</string>
    <string name="lbl_cvv">CVV</string>
    <string name="lbl_mobile_prepaid2">Mobile Prepaid</string>
    <string name="msg_pay_bill_of_this">Pay bill of this month</string>
    <string name="msg_number_notification">Number Notification</string>
    <string name="lbl_50">$50</string>
    <string name="lbl_start_now">Start Now</string>
    <string name="lbl_england">England</string>
    <string name="lbl_address_here">Address Here</string>
    <string name="msg_enter_your_billing">Enter Your Billing Code</string>
    <string name="lbl_water_bill">Water
Bill</string>
    <string name="lbl_suzane_jobs">Suzane Jobs</string>
    <string name="lbl_october">October</string>
    <string name="lbl_set_password">Set Password</string>
    <string name="lbl_a">A</string>
    <string name="lbl_sun">Sun</string>
    <string name="lbl_b">B</string>
    <string name="lbl_angelina_druff">Angelina Druff</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_34_56">34.56</string>
    <string name="lbl_money_receive">Money Receive</string>
    <string name="lbl_from">From</string>
    <string name="lbl_to">To</string>
    <string name="lbl_exchange_money">Exchange Money</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_history">History</string>
    <string name="msg_if_you_sent_money">If you sent money to somone</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_expires">Expires</string>
    <string name="lbl_new_card">New Card</string>
    <string name="lbl_money_exchange2">Money Exchange</string>
    <string name="msg_bill_paid_successfully">Bill Paid Successfully </string>
    <string name="lbl_bank_to_bank">Bank To
Bank</string>
    <string name="lbl_480">$480</string>
    <string name="lbl_money_exchange">Money
Exchange</string>
    <string name="msg_company_name_here">Company name here</string>
    <string name="lbl_pay_bills">Pay
Bills</string>
    <string name="lbl_if_card_active">If card active</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="msg_we_help_our_user">We help our user to make the right fiance decisioin to make their money safe.</string>
    <string name="lbl_105_00">$105.00</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_30_00">+$30.00</string>
    <string name="lbl_japan">Japan</string>
    <string name="lbl_16_23_jan">16 \u2013 23 Jan</string>
    <string name="lbl_user_gmail_com">user@gmail.com</string>
    <string name="msg_type_your_massage">Type Your Massage</string>
    <string name="lbl_cr">CR</string>
    <string name="msg_request_sent_successfully">Request Sent Successfully </string>
    <string name="lbl_per_day">per day</string>
    <string name="lbl_china">China</string>
    <string name="msg_online_digital">Online &amp; Digital</string>
    <string name="lbl_touch_id">Touch ID</string>
    <string name="lbl_60_00">$60.00</string>
    <string name="lbl_20">20</string>
    <string name="lbl_korea">Korea</string>
    <string name="msg_sign_in_with_google">Sign in with Google</string>
    <string name="lbl_new_contact">New Contact</string>
    <string name="lbl_phone_here">Phone Here</string>
    <string name="lbl_23">23</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">22</string>
    <string name="lbl_add_new_bill">Add New Bill</string>
    <string name="lbl_3_567_12">$3,567.12</string>
    <string name="msg_1222_3443_9881_1222">1222 3443 9881 1222</string>
    <string name="lbl_30_11_2020">30/11/2020</string>
    <string name="msg_sign_up_with_google">Sign up with Google</string>
    <string name="lbl_500">$500</string>
    <string name="lbl_your_cards">Your Cards</string>
    <string name="lbl_balance">Balance</string>
    <string name="lbl_ammount">Ammount</string>
    <string name="lbl_transaction">Transaction</string>
    <string name="lbl_3_41_pm">3:41 pm</string>
    <string name="lbl_receive_money">Receive
Money</string>
    <string name="lbl_mahi">Mahi</string>
    <string name="lbl_money_trasfer">Money Trasfer</string>
    <string name="msg_enter_the_ammount">Enter The Ammount</string>
    <string name="msg_select_a_account">Select a account to send money to other account</string>
    <string name="lbl_2_00">$2.00</string>
    <string name="lbl_business">Business</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_sign_up2">Sign Up</string>
    <string name="lbl_send">SEND</string>
    <string name="lbl_17">17</string>
    <string name="msg_enter_ammount_you">Enter ammount you want to send</string>
    <string name="lbl_18">18</string>
    <string name="lbl_card_activation">Card Activation</string>
    <string name="lbl_19">19</string>
    <string name="lbl_recharge_mobile">Recharge Mobile</string>
    <string name="msg_if_any_cash_in_your">If any cash in your card</string>
    <string name="lbl_save">SAVE</string>
    <string name="lbl_app_information">App Information</string>
    <string name="lbl_1_41_pm">1:41 pm</string>
    <string name="lbl_25_jan">25 Jan</string>
    <string name="lbl_share_app">Share App</string>
    <string name="lbl_prepaid_to">Prepaid To</string>
    <string name="msg_electricity_bill2">Electricity Bill</string>
    <string name="msg_select_bank_to_send">Select Bank To Send</string>
    <string name="lbl_december">December</string>
    <string name="lbl_159_107_1365">159-107-1365</string>
    <string name="lbl_france">France</string>
    <string name="lbl_mobile_prepaid">Mobile
Prepaid</string>
    <string name="msg_email_notification">Email Notification</string>
    <string name="lbl_30_12_2020">30/12/2020</string>
    <string name="lbl_recent">Recent </string>
    <string name="lbl_welcome_back">Welcome Back!</string>
    <string name="lbl_brusly">Brusly</string>
    <string name="msg_payment_sent_successfully">Payment Sent Successfully </string>
    <string name="lbl_adom">Adom</string>
    <string name="lbl_make_payment">Make Payment</string>
    <string name="lbl_usa">USA</string>
    <string name="msg_write_a_short_note">Write a short note</string>
    <string name="msg_enter_your_detail">Enter Your Detail Below</string>
    <string name="lbl_usd">USD</string>
    <string name="lbl_november">November</string>
    <string name="lbl_exchange_rate">Exchange Rate</string>
    <string name="lbl_all_contact">All Contact</string>
    <string name="msg_if_any_new_update">If any new update come</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_1_746">1.746</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_select_card">Select Card</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_afghanistan">Afghanistan</string>
    <string name="msg_if_anyone_sent_you">If anyone sent you money</string>
    <string name="lbl_card_details">Card Details</string>
    <string name="lbl_all_time">All time</string>
    <string name="msg_confirm_password">Confirm Password</string>
    <string name="msg_enter_your_account2">Enter Your Account Password To Send</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_pay_bill">Pay Bill</string>
    <string name="lbl_15_00">-$15.00</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_card">Card</string>
    <string name="lbl_hello">Hello!</string>
    <string name="lbl_user_name2">User Name</string>
    <string name="lbl_belgeman">Belgeman</string>
    <string name="lbl_send2">send</string>
    <string name="lbl_bank_to_bank2">Bank to Bank</string>
    <string name="lbl_cash_in">Cash In</string>
    <string name="lbl_wed">Wed</string>
    <string name="msg_money_sent_successfully">Money Sent Successfully </string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="msg_save_my_card_details">Save My Card Details</string>
    <string name="lbl_support">Support</string>
    <string name="lbl_10_00">-$10.00</string>
    <string name="lbl_name_or_number">Name or Number</string>
    <string name="lbl_govt_paybills">Govt.paybills</string>
    <string name="lbl_currency">Currency</string>
    <string name="lbl_name_here">Name Here</string>
    <string name="lbl_activity">Activity</string>
    <string name="lbl_income">Income</string>
    <string name="lbl_languages">Languages</string>
    <string name="lbl_otp">OTP</string>
    <string name="lbl_pending">Pending</string>
    <string name="lbl_vat">Vat</string>
    <string name="lbl_electric_fee">Electric Fee</string>
    <string name="lbl_your_email_here">Your Email Here</string>
    <string name="lbl_send_otp">SEND OTP</string>
    <string name="msg_send_notification">Send notification to your number</string>
    <string name="lbl_total_balance">Total Balance</string>
    <string name="lbl_30_01_2021">30/01/2021</string>
    <string name="lbl_paid">Paid</string>
    <string name="lbl_banking">Banking</string>
    <string name="lbl_fri">Fri</string>
    <string name="msg_card_new_balance">Card New Balance</string>
    <string name="lbl_manage_account">Manage Account</string>
    <string name="lbl_mon">Mon</string>
    <string name="lbl_add_card">Add Card</string>
    <string name="lbl_send_money2">Send money</string>
    <string name="lbl_adom_shafi">Adom Shafi</string>
    <string name="lbl_limit">Limit</string>
    <string name="lbl_tue">Tue</string>
    <string name="msg_enter_your_account">Enter Your Account Password</string>
    <string name="lbl_favorite">Favorite</string>
    <string name="lbl_shopping">Shopping</string>
    <string name="lbl_2_234">2.234</string>
    <string name="msg_enter_your_send">Enter Your Send Account Password</string>
    <string name="lbl_food">Food</string>
    <string name="lbl_electric_bill">Electric Bill</string>
    <string name="lbl_update_feature">Update Feature</string>
    <string name="lbl_5156446981">5156446981</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_6_46_pm">6:46 pm</string>
    <string name="lbl_sat">Sat</string>
    <string name="lbl_save_on_list">Save On List</string>
    <string name="lbl_baminu">Baminu</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_vietnamese">Vietnamese</string>
    <string name="lbl_30_10_2020">30/10/2020</string>
    <string name="msg_send_notification2">Send notification to your email</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_january">January</string>
    <string name="lbl_0">$0</string>
    <string name="lbl_1">1</string>
    <string name="lbl_from_suzane">From Suzane...</string>
    <string name="lbl_money_request">Money Request</string>
    <string name="msg_if_anyone_sent_you2">If anyone sent you money request</string>
</resources>