<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="onboardingVM" type="com.digibank.app.modules.onboarding.data.viewmodel.OnboardingVM"/>
    </data>
    <LinearLayout android:id="@+id/linearOnboarding"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/_36pxh"
        android:paddingStart="@dimen/_36pxh"
        android:paddingTop="@dimen/_110pxv" style="@style/groupStyle{&quot;name&quot;:&quot;gray_100&quot;}">
        <ImageView android:id="@+id/imageGlobeOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_80pxh"
            android:layout_width="@dimen/_80pxh"
            android:scaleType="fitXY" android:src="@drawable/img_globe"
            tools:ignore="ContentDescription" tools:src="@drawable/img_globe"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtOnlinedigital"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:singleLine="true"
            android:text="@{onboardingVM.onboardingModel.txtOnlinedigital}"
            style="@style/txtOverpassregular30" tools:text="@string/msg_online_digital"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtBanking"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_18pxh"
            android:singleLine="true"
            android:text="@{onboardingVM.onboardingModel.txtBanking}"
            style="@style/txtOverpassromanextrabold64" tools:text="@string/lbl_banking"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtWehelpouruser"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_14pxh"
            android:text="@{onboardingVM.onboardingModel.txtWehelpouruser}"
            style="@style/txtOverpassregular16_1" tools:text="@string/msg_we_help_our_user"/>
        <androidx.appcompat.widget.AppCompatButton
            android:background="@color/{&quot;name&quot;:&quot;primary&quot;}"
            android:ellipsize="end" android:fontFamily="@font/overpass"
            android:gravity="center" android:id="@+id/btnStartNow"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_58pxv"
            android:layout_width="@dimen/_342pxh"
            android:letterSpacing="0.04"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_start_now"
            android:textAllCaps="true"
            android:textColor="@color/{&quot;name&quot;:&quot;onPrimary&quot;}"
            android:textFontWeight="700"
            android:textSize="@dimen/_16pxh" android:textStyle="bold" tools:text="@string/lbl_start_now"/>
    </LinearLayout>
</layout>
